# IMU

./: settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  README.md  sensor_jni.cpp  sensor_manager.cpp  sensor_manager.h
app/src/main/java/com/example/imu/: CameraPreview.kt  MainActivity.kt  NativeSensorManager.kt  SensorManager.kt
app/src/main/java/com/example/imu/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
